--- a/Pest_Classifier_CNN.ipynb
+++ b/Pest_Classifier_CNN.ipynb
@@ -169,7 +169,7 @@
         "colab": {}
       },
       "source": [
-        "support.Unzip('/content/GREENPATROL_DB_V3.0.zip','/content/Tomato/Images')"
+        "support.Unzip('/content/gdrive/My Drive/NCI-Research-Project-Data-V1.0/LABELS_V2.0.zip','/content/Pests/Labels')"
       ],
       "execution_count": null,
       "outputs": []
@@ -182,7 +182,7 @@
         "colab": {}
       },
       "source": [
-        "support.fileCount('/content/Tomato/Images')"
+        "support.fileCount('/content/Pests/Labels')"
       ],
       "execution_count": null,
       "outputs": []
@@ -268,7 +268,7 @@
         "colab": {}
       },
       "source": [
-        " dataSet.prepare_dataset('/content/Tomato/Labels' ,'/content/Tomato/Images/', class_object,   test_size=8000)"
+        " dataSet.prepare_dataset('/content/Pests/Labels' ,'/content/Pests/Images/', class_object,   test_size=11241)"
       ],
       "execution_count": null,
       "outputs": []
@@ -359,6 +359,37 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "N5Aic9IaYzzP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "filepath=\"/content/gdrive/My Drive/Models/CNN/weights-{epoch:02d}-{val_accuracy:.3f}.hdf5\"\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+        "checkpoint = ModelCheckpoint(filepath, monitor='val_accuracy',\n",
+        "                               verbose=1, mode='max')\n",
+        "\n",
+        "callbacks_list = [checkpoint]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L0QXWlnPZAV_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "_WES9XnnrgVZ",
         "colab_type": "code",
         "colab": {}
@@ -378,7 +409,7 @@
         " \n",
         "# compile the model\n",
         "model_with_conv.compile(optimizer='adam',\n",
-        "              loss='sparse_categorical_crossentropy',\n",
+        "              loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
       "execution_count": null,
@@ -419,7 +450,11 @@
         "colab": {}
       },
       "source": [
-        "model_with_conv.fit(trainX, trainY,verbose=1, epochs=50,callbacks=[logs],validation_data=(testX,testY))\n"
+        "from tensorflow.keras.models import load_model\n",
+        "model_with_conv = load_model(\"/content/gdrive/My Drive/Models/CNN/weights-50-0.615.hdf5\")\n",
+        "model_with_conv.fit(trainX, trainY,  epochs=50,verbose=1,\n",
+        "                           validation_data=(testX, testY),\n",
+        "                          callbacks=callbacks_list)"
       ],
       "execution_count": null,
       "outputs": []
@@ -527,6 +562,109 @@
       },
       "source": [
         "GenerateGraphs(acc,val_accuracy,loss,val_loss)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EzLPEUQCUoDn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import f1_score, precision_score, recall_score, confusion_matrix\n",
+        "y_pred1 = model_with_conv.predict(testX)\n",
+        "y_pred = np.argmax(y_pred1, axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hWQF6g1uU-13",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(precision_score(testY, y_pred , average=\"macro\"))\n",
+        "print(recall_score(testY, y_pred , average=\"macro\"))\n",
+        "print(f1_score(testY, y_pred , average=\"macro\"))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LXUmC1kZXAMy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "yhat_probs = model_with_conv.predict(testX, verbose=0)\n",
+        "yhat_classes = model_with_conv.predict_classes(testX, verbose=0)\n",
+        "print(yhat_probs)\n",
+        "print(yhat_classes)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CHEUM9B5XV3X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import precision_score\n",
+        "from sklearn.metrics import recall_score\n",
+        "from sklearn.metrics import f1_score\n",
+        "from sklearn.metrics import cohen_kappa_score\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tuFpwOigY3KH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "def PrintMetrics(testX, testY, model):\n",
+        "    yhat_probs = model.predict(testX, verbose=0)\n",
+        "    yhat_classes = model.predict_classes(testX, verbose=0)\n",
+        "    accuracy = accuracy_score(testY, yhat_classes)\n",
+        "    precision = precision_score(testY, yhat_classes, average=\"macro\")\n",
+        "    print('Accuracy: %f' % accuracy)\n",
+        "    print('Precision: %f' % precision)\n",
+        "    recall = recall_score(testY, yhat_classes,average=\"macro\")\n",
+        "    print('Recall: %f' % recall)\n",
+        "    f1 = f1_score(testY, yhat_classes,average=\"macro\")\n",
+        "    print('F1 score: %f' % f1)\n",
+        "    kappa = cohen_kappa_score(testY, yhat_classes)\n",
+        "    print('Cohens kappa: %f' % kappa)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GHRSxP4UgsEM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "PrintMetrics(testX, testY, model_with_conv)"
       ],
       "execution_count": null,
       "outputs": []
