--- a/Increase_RAM_Reference_Notes_By_Techhawa_.ipynb
+++ b/Increase_RAM_Reference_Notes_By_Techhawa_.ipynb
@@ -252,6 +252,37 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "SHb4SjEzk8Q0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras.applications.vgg16 import VGG16\n",
+        "model = VGG16(weights=None, include_top=False,input_shape=(48,48,3))\n",
+        "model.layers.append(Dense(64, activation='relu'))\n",
+        "model.layers.append(Dense(10, activation='softmax'))\n",
+        "\n",
+        "model.compile(optimizer='adam',loss='categorical_crossentropy', metrics=['accuracy'])\n"
+      ],
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "61fPIMC62XV_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "srnccxXqSGOq",
         "colab_type": "code",
         "colab": {}
@@ -338,7 +369,7 @@
         "colab": {}
       },
       "source": [
-        "history = model.fit(trainX, [trainY, trainY, trainY], validation_data=(testX, [testY, testY, testY]), epochs=25,batch_size= 250, verbose=1, callbacks=[lr_sc])"
+        "model.fit(trainX,trainY,verbose=1,epochs=1)"
       ],
       "execution_count": null,
       "outputs": []
